--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,6 @@
----
----
-
-@import 'jekyll-theme-hacker';
+@import "{{ site.theme }}";
+    
+header {
+    display: none;
+}
+import 'jekyll-theme-hacker';
